# seal

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  dist-workspace.toml  seal.toml  zensical.toml
.github/: CODE_OF_CONDUCT.md  codecov.yml  dependabot.yml  zizmor.yml
.github/ISSUE_TEMPLATE/: 1_bug_report.yaml  2_question.yaml
.github/workflows/: ci.yml  release.yml
.issues/: ISSUES.md
crates/seal/: Cargo.toml
crates/seal/src/: cli.rs  main.rs  printer.rs  settings.rs  version.rs
crates/seal/src/commands/: bump.rs  help.rs  migrate.rs  mod.rs  seal_self.rs  validate.rs
crates/seal/src/commands/generate/: changelog.rs  mod.rs  release_body.rs
crates/seal/tests/it/: help.rs  main.rs  self_version.rs
crates/seal/tests/it/bump/: changelog.rs  confirmation.rs  custom_formats.rs  mod.rs  version_calculation.rs
crates/seal/tests/it/common/: mod.rs
crates/seal/tests/it/generate/: changelog.rs  mod.rs  release_body.rs
crates/seal/tests/it/generate/snapshots/: it__generate__release_body__generate_release_custom_changelog_path.snap  it__generate__release_body__generate_release_prerelease_alpha.snap  it__generate__release_body__generate_release_prerelease_beta.snap  it__generate__release_body__generate_release_prerelease_rc.snap  it__generate__release_body__generate_release_single_version.snap  it__generate__release_body__generate_release_stable_version.snap  it__generate__release_body__generate_release_with_contributors.snap
crates/seal/tests/it/migrate/: mod.rs  rooster.rs
crates/seal/tests/it/validate/: config.rs  mod.rs  project.rs
crates/seal_bump/: Cargo.toml
crates/seal_bump/src/: bump.rs  lib.rs
crates/seal_changelog/: Cargo.toml
crates/seal_changelog/src/: lib.rs
crates/seal_cli/: Cargo.toml
crates/seal_cli/src/: lib.rs
crates/seal_command/: Cargo.toml
crates/seal_command/src/: lib.rs
crates/seal_core/: Cargo.toml
crates/seal_dev/: Cargo.toml
crates/seal_dev/src/: generate_cli_reference.rs  generate_options.rs  generate_options_reference.rs  main.rs
crates/seal_file_change/: Cargo.toml
crates/seal_file_change/src/: lib.rs
crates/seal_fs/: Cargo.toml
crates/seal_fs/src/: lib.rs
crates/seal_github/: Cargo.toml
crates/seal_github/src/: github.rs  helpers.rs  lib.rs
crates/seal_github/src/github/: client.rs  mock.rs
crates/seal_logging/: Cargo.toml
crates/seal_logging/src/: lib.rs
crates/seal_macros/: Cargo.toml
crates/seal_macros/src/: lib.rs  options_metadata.rs
crates/seal_migrate/: Cargo.toml
crates/seal_migrate/src/: lib.rs  rooster.rs
crates/seal_options_metadata/: Cargo.toml
crates/seal_options_metadata/src/: lib.rs
crates/seal_project/: Cargo.toml
crates/seal_project/src/: config.rs  discovery.rs  error.rs  git.rs  lib.rs  project.rs  project_name.rs  workspace_member.rs
crates/seal_terminal/: Cargo.toml
crates/seal_terminal/src/: lib.rs
crates/seal_version/: Cargo.toml
crates/seal_version/src/: lib.rs
docs/: cli.md  configuration.md  configuration2.md  migration.md  version-files.md
docs/reference/: cli.md  configuration.md
docs/usage/: bumping_versions.md
licenses/: README.md
scripts/: prepare_docs.py
