[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.90"
homepage = "https://github.com/MatthewMckee4/seal"
repository = "https://github.com/MatthewMckee4/seal"
authors = ["Matthew McKee <matthewmckee4@yahoo.co.uk>"]
license = "MIT"

[workspace.dependencies]
seal_bump = { path = "crates/seal_bump" }
seal_changelog = { path = "crates/seal_changelog" }
seal_cli = { path = "crates/seal_cli" }
seal_file_change = { path = "crates/seal_file_change" }
seal_fs = { path = "crates/seal_fs" }
seal_macros = { path = "crates/seal_macros" }
seal_options_metadata = { path = "crates/seal_options_metadata" }
seal_project = { path = "crates/seal_project" }
seal_version = { path = "crates/seal_version" }

anstream = { version = "0.6.21" }
anyhow = { version = "1.0.100" }
assert_cmd = "2.0"
assert_fs = "1.1"
clap = { version = "4.5.17", features = ["derive", "env", "string", "wrap_help"] }
dunce = { version = "1.0.5" }
fs-err = { version = "3.0.0", features = ["tokio"] }
glob = { version = "0.3.3" }
insta = { version = "1.41", features = ["filters", "json"] }
itertools = { version = "0.14.0" }
markdown = { version = "1.0.0-alpha.23" }
octocrab = { version = "0.43" }
owo-colors = { version = "4.1.0" }
pretty_assertions = { version = "1.4.1" }
proc-macro2 = { version = "1.0.86" }
quote = { version = "1.0.37" }
regex = { version = "1.12.2" }
semver = { version = "1.0" }
serde = { version = "1.0.210", features = ["derive", "rc"] }
serde_json = { version = "1.0" }
similar = { version = "2.7" }
syn = { version = "2.0.77" }
tempfile = { version = "3.14" }
textwrap = { version = "0.16.1" }
thiserror = { version = "2.0" }
tokio = { version = "1", features = ["rt", "macros"] }
toml = { version = "0.9" }
which = { version = "8.0.0" }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -2 }
# Allowed pedantic lints
char_lit_as_u8 = "allow"
collapsible_else_if = "allow"
collapsible_if = "allow"
implicit_hasher = "allow"
map_unwrap_or = "allow"
match_same_arms = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
similar_names = "allow"
struct_excessive_bools = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
used_underscore_binding = "allow"
# Disallowed restriction lints
print_stdout = "warn"
print_stderr = "warn"
dbg_macro = "warn"
empty_drop = "warn"
empty_structs_with_brackets = "warn"
exit = "warn"
get_unwrap = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
rest_pat_in_fully_bound_structs = "warn"
if_not_else = "allow"
use_self = "warn"

# Diagnostics are not actionable: Enable once https://github.com/rust-lang/rust-clippy/issues/13774 is resolved.
large_stack_arrays = "allow"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
