[package]
name = "seal"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
seal_version = { workspace = true }
seal_project = { workspace = true }

clap = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anstream = { workspace = true }
anyhow = { workspace = true }
owo-colors = { workspace = true }
itertools = { workspace = true }
which = { workspace = true }
regex = { workspace = true }
dunce = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
assert_fs = { workspace = true }
insta = { workspace = true, features = ["filters", "json"] }
predicates = { workspace = true }
tempfile = { workspace = true }
fs-err = { workspace = true, features = ["tokio"] }

[lints]
workspace = true
