[package]
name = "seal"
version = "0.0.1-alpha.3"
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
default-run = "seal"

[features]
integration-test = []

[dependencies]
seal_bump = { workspace = true }
seal_changelog = { workspace = true }
seal_cli = { workspace = true }
seal_fs = { workspace = true }
seal_github = { workspace = true }
seal_project = { workspace = true }
seal_version = { workspace = true }

anstream = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
dunce = { workspace = true }
fs-err = { workspace = true }
itertools = { workspace = true }
owo-colors = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { version = "1", features = ["rt", "macros"] }
which = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
assert_fs = { workspace = true }
insta = { workspace = true, features = ["filters", "json"] }
tempfile = { workspace = true }

[lints]
workspace = true
