[package]
name = "seal_bump"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
seal_fs = { workspace = true }
seal_file_change = { workspace = true }
seal_project = { workspace = true }

anyhow = { workspace = true }
fs-err = { workspace = true }
glob = { workspace = true }
owo-colors = { workspace = true }
semver = { workspace = true }
similar = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true
