[package]
name = "seal_changelog"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
seal_project = { workspace = true }
seal_file_change = { workspace = true }

anyhow = { workspace = true }
fs-err = { workspace = true}
octocrab = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
insta = { workspace = true }

[lints]
workspace = true
