[package]
name = "seal_cli"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
seal_version = { workspace = true }

clap = { workspace = true }

[lints]
workspace = true
