[package]
name = "seal_dev"
version = "0.0.0"
publish = false
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
seal_cli = { workspace = true }
seal_options_metadata = { workspace = true }
seal_project = { workspace = true }

anstream = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, features = ["wrap_help", "env"] }
fs-err = { workspace = true, features = ["tokio"] }
itertools = { workspace = true }
markdown = { workspace = true }
pretty_assertions = { workspace = true }
textwrap = { workspace = true }
