[package]
name = "seal_file_change"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
seal_fs = { workspace = true }
seal_terminal = { workspace = true }

anyhow = { workspace = true }
console = { workspace = true }
fs-err = { workspace = true }
similar = { workspace = true }

[lints]
workspace = true
