[package]
name = "seal_github"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
octocrab = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
