[package]
name = "seal_macros"
version = "0.0.0"
description = "This is an internal component crate of seal"
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[lib]
proc-macro = true
doctest = false

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full"] }
textwrap = { workspace = true }

[lints]
workspace = true
