[package]
name = "seal_options_metadata"
version = "0.0.0"
description = "This is an internal component crate of seal"
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
