[package]
name = "seal_project"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
seal_macros = { workspace = true }
seal_options_metadata = { workspace = true }

fs-err = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
dunce = { workspace = true }
insta = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
